--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "dependencies": {
     "@vuepress/plugin-back-to-top": "^1.7.1",
     "@vuepress/plugin-pwa": "^1.7.1",
+    "body-parser": "^1.20.1",
+    "express": "^4.18.2",
     "vuepress": "^1.7.1",
-    "vuepress-theme-cool": "^1.3.1"
+    "vuepress-theme-cool": "^1.3.1",
+    "mysql2": "^2.3.3"
   }
 }
